--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,6 +3,8 @@
 <h1>Sign up</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
+  <%= form_for(@user, url: signup_path) do |f| %>
     <%= render 'form' %>
+  <% end %>
   </div>
 </div>
